[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/obstacle.png" type="Texture" id=1]
[ext_resource path="res://scenes-scripts/swim_obstacle.gd" type="Script" id=2]

[node name="swim_obstacle" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.35 )
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="Top2" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 195.95 )
scale = Vector2( 1, 1.34975 )
polygon = PoolVector2Array( 16.5432, -375.428, 154.632, -375.428, 156.86, -314.337, 233.7, -314.337, 233.7, -178.157, 342.835, -180.703, 340.608, -201.066, 507.651, -199.793, 505.424, -97.9763, 343.948, 59.8401, -352.066, 63.6582, -466.769, -108.158, -465.656, -189.612, -373.225, -184.521, -374.339, -302.883, -321.998, -301.61, -323.112, -190.884, -189.477, -188.339, -190.591, -316.883, 15.4295, -318.156 )
__meta__ = {
"_edit_group_": true
}

[node name="Bottom2" type="CollisionPolygon2D" parent="."]
position = Vector2( -740.897, -498.468 )
polygon = PoolVector2Array( 252.488, 533.85, 322.678, 370.39, 431.101, 371.213, 433.907, 291.037, 509.674, 287.83, 512.48, 209.258, 891.311, 212.465, 891.311, 154.738, 917.969, 154.738, 1125.22, 411.255, 1350.36, 497.525, 1126.55, 588.336, 1093.35, 865.097, 488.627, 823.405, 487.224, 764.075, 447.938, 764.075, 445.132, 664.657, 376.381, 666.26 )
__meta__ = {
"_edit_group_": true
}

[node name="Middle2" type="CollisionPolygon2D" parent="."]
position = Vector2( -1051.12, -410.838 )
polygon = PoolVector2Array( 664.135, 282.008, 661.326, 521.737, 857.979, 520.667, 856.106, 581.669, 1199.78, 582.739, 1198.84, 640.531, 1226.94, 638.391, 1228.81, 517.456, 1407.67, 520.667, 1410.48, 280.937, 1303.73, 277.727, 1304.66, 212.443, 787.746, 210.303, 789.619, 282.008 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]

[node name="Bottom" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -740.897, -498.468 )
polygon = PoolVector2Array( 252.488, 533.85, 322.678, 370.39, 431.101, 371.213, 433.907, 291.037, 509.674, 287.83, 512.48, 209.258, 891.311, 212.465, 891.311, 154.738, 917.969, 154.738, 1125.22, 411.255, 1350.36, 497.525, 1126.55, 588.336, 1093.35, 865.097, 488.627, 823.405, 487.224, 764.075, 447.938, 764.075, 445.132, 664.657, 376.381, 666.26 )
__meta__ = {
"_edit_group_": true
}

[node name="bottom" type="Sprite" parent="Area2D/Bottom"]
position = Vector2( 750.264, 516.65 )
scale = Vector2( 1.08056, 0.423413 )
texture = ExtResource( 1 )

[node name="obstacle6" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -21.548, -191.838 )
scale = Vector2( 0.780977, 1 )
texture = ExtResource( 1 )

[node name="obstacle7" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -130.102, -550.708 )
scale = Vector2( 0.256325, 0.497914 )
texture = ExtResource( 1 )

[node name="obstacle9" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -111.274, 403.648 )
scale = Vector2( 0.498731, 0.497914 )
texture = ExtResource( 1 )

[node name="obstacle10" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( 251.648, 549.453 )
scale = Vector2( 0.192435, 0.744543 )
texture = ExtResource( 1 )

[node name="obstacle11" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -111.274, 613.834 )
scale = Vector2( 0.370951, 0.295131 )
texture = ExtResource( 1 )

[node name="obstacle8" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( 143.922, -691.884 )
scale = Vector2( 0.0367789, 0.497914 )
texture = ExtResource( 1 )

[node name="obstacle3" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -311.235, 155.719 )
rotation = 5.93412
scale = Vector2( 0.28765, 0.495411 )
texture = ExtResource( 1 )

[node name="obstacle12" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -330.052, -142.201 )
rotation = 3.31613
scale = Vector2( 0.28765, 0.564244 )
texture = ExtResource( 1 )

[node name="obstacle13" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( 310.758, -49.1296 )
rotation = 0.785398
scale = Vector2( 0.515899, 0.479683 )
texture = ExtResource( 1 )

[node name="Top" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0, 195.95 )
scale = Vector2( 1, 1.34975 )
polygon = PoolVector2Array( 16.5432, -375.428, 154.632, -375.428, 156.86, -314.337, 233.7, -314.337, 233.7, -178.157, 342.835, -180.703, 340.608, -201.066, 507.651, -199.793, 505.424, -97.9763, 343.948, 59.8401, -352.066, 63.6582, -466.769, -108.158, -465.656, -189.612, -373.225, -184.521, -374.339, -302.883, -321.998, -301.61, -323.112, -190.884, -189.477, -188.339, -190.591, -316.883, 15.4295, -318.156 )
__meta__ = {
"_edit_group_": true
}

[node name="top" type="Sprite" parent="Area2D/Top"]
position = Vector2( -0.00694275, -60.3939 )
scale = Vector2( 1, 0.346702 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="obstacle" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( -350.865, -3.68188 )
rotation = 1.33264
scale = Vector2( 0.72633, 0.352471 )
texture = ExtResource( 1 )

[node name="obstacle3" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( 379.078, -19.9415 )
rotation = 1.90453
scale = Vector2( 0.708478, 0.412147 )
texture = ExtResource( 1 )

[node name="obstacle2" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( -385.627, -245.026 )
scale = Vector2( 0.224489, 0.330808 )
texture = ExtResource( 1 )

[node name="obstacle4" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( 425.841, -255.408 )
scale = Vector2( 0.239304, 0.420963 )
texture = ExtResource( 1 )

[node name="obstacle5" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( 23.1711, -525.508 )
scale = Vector2( 0.610628, 0.613054 )
texture = ExtResource( 1 )

[node name="obstacle7" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( 87.7856, -724.61 )
scale = Vector2( 0.204068, 0.55498 )
texture = ExtResource( 1 )

[node name="obstacle6" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( -345.319, -488.466 )
scale = Vector2( 0.0753245, 0.613054 )
texture = ExtResource( 1 )

[node name="Middle" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -1051.12, -410.838 )
polygon = PoolVector2Array( 664.135, 282.008, 661.326, 521.737, 857.979, 520.667, 856.106, 581.669, 1199.78, 582.739, 1198.84, 640.531, 1226.94, 638.391, 1228.81, 517.456, 1407.67, 520.667, 1410.48, 280.937, 1303.73, 277.727, 1304.66, 212.443, 787.746, 210.303, 789.619, 282.008 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="middle" type="Sprite" parent="Area2D/Middle"]
position = Vector2( 1036.85, 399.145 )
scale = Vector2( 1.08056, 0.346773 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="obstacle6" type="Sprite" parent="Area2D/Middle/middle"]
position = Vector2( 9.61519, -191.838 )
scale = Vector2( 0.69078, 1 )
texture = ExtResource( 1 )

[node name="obstacle7" type="Sprite" parent="Area2D/Middle/middle"]
position = Vector2( -76.9182, 345.746 )
scale = Vector2( 0.256325, 0.497914 )
texture = ExtResource( 1 )

[node name="obstacle8" type="Sprite" parent="Area2D/Middle/middle"]
position = Vector2( 163.345, 510.291 )
scale = Vector2( 0.0367789, 0.497914 )
texture = ExtResource( 1 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
